# Feedback_report_generator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
assignment/: models.py  tasks.py  urls.py  utils.py  views.py
assignment/templates/: report_template.html
feedback_report/: celery.py  settings.py  urls.py
